--- a/src/app/learn/learn.component.html
+++ b/src/app/learn/learn.component.html
@@ -1,1 +1,5 @@
 <p>learn works!</p>
+<p>{{name}}</p>
+
+<p class="name"  [style.color] = "'green'" >{{name}}  </p>
+    <p class="text-danger">Hello World!!</p>
